--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-  "dependencies": {
-    "axios": "^1.7.7",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "node-fetch": "^3.3.2"
-  },
-  "name": "web",
+  "name": "myapp",
   "version": "1.0.0",
-  "main": "node.js",
+  "description": "Aplicación básica con Node.js y Express",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
